# wifi-strength-bar

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: DEVELOPMENT.md  README.md
src/: App.tsx  styles.css
src-swift/: Package.swift
src-swift/Sources/wifi-scanner/: main.swift
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: WifiList.tsx
src/utils/: knownNetworks.test.ts  knownNetworks.ts  wifiNotification.test.ts  wifiNotification.ts
