[package]
name = "wifi-monitor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wifi_scan = "0.7"
tauri-plugin-notification = "2.3.3"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-location = "0.3"
objc2-core-wlan = { version = "0.3", features = ["CWConfiguration", "CWNetworkProfile"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
